# wxWidgets-cmake-submodule-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: rebuild.sh  reset.sh  setup.sh
